--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           d="M851.8,100c125,0,288.3-45,348.2-64V0H0v44c3.7-1,7.3-1.9,11-2.9C80.7,22,151.7,10.8,223.5,6.3C276.7,2.9,330,4,383,9.8 c52.2,5.7,103.3,16.2,153.4,32.8C623.9,71.3,726.8,100,851.8,100z">
         </path>
       </svg>
-            <a class="works pt1111Img">
+            <a class="works pt1111Img" href="https://south.1111.com.tw/ptjob/index.asp">
                 <div class="cover"></div>
             </a>
 
-            <a class="works photoImg">
+            <a class="works photoImg" href="https://raywang1025.github.io/photo/">
                 <div class="cover"></div>
             </a>
             <div class="clearfix"></div>
